--- a/templates/actors.html
+++ b/templates/actors.html
@@ -9,26 +9,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../SUBD/film.css">
-    <link rel="stylesheet" type="text/css" href="../SUBD/nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="../css/film.css">
+    <link rel="stylesheet" type="text/css" href="../css/nav-bar.css">
 
 
 
 </head>
 <body>
     <div>
-        <ul id="navbar">
-            <li class="navbar_link"><a class="nav_link" href="/home">Начало</a></li>
-            <li class="navbar_link"><a class="nav_link" href="/contacts">Контакти</a></li>
-      	    <li class="navbar_link"><a class="nav_link" href="/about">За проекта</a></li>
-      		  <li class="navbar_link"><a class="nav_link" href="" >Дарете сега</a>
-                <ul>
-                    <li>
-                        <a href="/online">Онлайн</a>
-                        <a class = "punct" href="/donators">Топ 3 дарители</a>
-                    </li>
-          		  </ul>
-        		</li>
+      <ul id="navbar">
+          <li class="navbar_link"><a class="nav_link" href="/home">home</a></li>
+          <li class="navbar_link"><a class="nav_link" href="/contacts">Movies</a></li>
+
+          <li class="navbar_link"><a class="nav_link" href="" >Add</a>
+              <ul>
+                  <li>
+                      <a href="/movie_form">Movie</a>
+                      <a class = "punct" href="/actor_form">Actors</a>
+                      <a class = "punct" href="/producer_form">Producer</a>
+                  </li>
+              </ul>
+          </li>
 
 
 
