--- a/SUBDproject/templates/edit_movie.html
+++ b/SUBDproject/templates/edit_movie.html
@@ -17,19 +17,19 @@
 </head>
 <body>
     <div>
-      <ul id="navbar">
-          <li class="navbar_link"><a class="nav_link" href="/home">home</a></li>
-          <li class="navbar_link"><a class="nav_link" href="/contacts">Movies</a></li>
+        <ul id="navbar">
+            <li class="navbar_link"><a class="nav_link" href="/home">home</a></li>
+            <li class="navbar_link"><a class="nav_link" href="/contacts">Movies</a></li>
 
-          <li class="navbar_link"><a class="nav_link" href="" >Add</a>
-              <ul>
-                  <li>
-                      <a href="/movie_form">Movie</a>
-                      <a class = "punct" href="/actor_form">Actors</a>
-                      <a class = "punct" href="/producer_form">Producer</a>
-                  </li>
-              </ul>
-          </li>
+      		  <li class="navbar_link"><a class="nav_link" href="" >Add</a>
+                <ul>
+                    <li>
+                        <a href="/movie_form">Movie</a>
+                        <a class = "punct" href="/actor_form">Actors</a>
+                        <a class = "punct" href="/producer_form">Producer</a>
+                    </li>
+          		  </ul>
+        		</li>
 
 
 
@@ -38,24 +38,24 @@
 
     <div class= "post">
 
-            <h2>Actors</h2>
+            <h2>Edit Film</h2>
         <form action="http://localhost:5000/user" target="" method="POST">
             Name<br>
             <br>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
-            <br>Nationality<br>
+            <br>Year<br>
             <br>
-            <input type="text" id="nationality" name="nationality" placeholder="Nationality" required autofocus>
+            <input type="text" id="year" name="year" placeholder="Year" required autofocus>
             <br>
-            <br>Film<br>
+            <br>Director<br>
             <br>
-            <input type="text" id="film" name="film" placeholder="Film" required autofocus>
+            <input type="text" id="director" name="director" placeholder="Director" required autofocus>
             <br>
 
             <br>
-            <input type="submit" value="Submit">
+            <input id="button" type="submit" value="Submit">
         </form>
-s
+
     </div>
 </body>
 </html>
