--- a/SUBDproject/templates/film.html
+++ b/SUBDproject/templates/film.html
@@ -9,8 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../css/film.css">
-    <link rel="stylesheet" type="text/css" href="../css/nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/film.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/nav-bar.css">
 
 
 
@@ -39,7 +39,7 @@
     <div class= "post">
 
             <h2>Film</h2>
-        <form action="http://localhost:5000/user" target="" method="POST">
+        <form action="http://localhost:5000/create_movie" target="" method="POST">
             Name<br>
             <br>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
@@ -53,7 +53,7 @@
             <br>
 
             <br>
-            <input type="submit" value="Submit">
+            <input id="button" type="submit" value="Submit">
         </form>
 
     </div>
