--- a/SUBDproject/templates/edit_actor.html
+++ b/SUBDproject/templates/edit_actor.html
@@ -38,7 +38,7 @@
 
     <div class= "post">
 
-            <h2>Edit Film</h2>
+            <h2>Edit Actor</h2>
         <form action="http://localhost:5000/user" target="" method="POST">
             Name<br>
             <br>
@@ -53,7 +53,7 @@
             <br>
 
             <br>
-            <input type="submit" value="Submit">
+            <input id="button" type="submit" value="Submit">
         </form>
 
     </div>
