--- a/SUBDproject/templates/edit_producer.html
+++ b/SUBDproject/templates/edit_producer.html
@@ -4,7 +4,7 @@
     <title>Регистрация</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="Login.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -17,19 +17,19 @@
 </head>
 <body>
     <div>
-        <ul id="navbar">
-            <li class="navbar_link"><a class="nav_link" href="/home">home</a></li>
-            <li class="navbar_link"><a class="nav_link" href="/contacts">Movies</a></li>
+      <ul id="navbar">
+          <li class="navbar_link"><a class="nav_link" href="/home">home</a></li>
+          <li class="navbar_link"><a class="nav_link" href="/contacts">Movies</a></li>
 
-      		  <li class="navbar_link"><a class="nav_link" href="" >Add</a>
-                <ul>
-                    <li>
-                        <a href="/movie_form">Movie</a>
-                        <a class = "punct" href="/actor_form">Actors</a>
-                        <a class = "punct" href="/producer_form">Producer</a>
-                    </li>
-          		  </ul>
-        		</li>
+          <li class="navbar_link"><a class="nav_link" href="" >Add</a>
+              <ul>
+                  <li>
+                      <a href="/movie_form">Movie</a>
+                      <a class = "punct" href="/actor_form">Actors</a>
+                      <a class = "punct" href="/producer_form">Producer</a>
+                  </li>
+              </ul>
+          </li>
 
 
 
@@ -38,24 +38,23 @@
 
     <div class= "post">
 
-            <h2>Edit Actor</h2>
+            <h2>Edit Producer</h2>
         <form action="http://localhost:5000/user" target="" method="POST">
             Name<br>
             <br>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
-            <br>Year<br>
+            <br>Years<br>
             <br>
-            <input type="text" id="year" name="year" placeholder="Year" required autofocus>
+            <input type="text" id="years" name="years" placeholder="Years" required autofocus>
             <br>
-            <br>Director<br>
+            <br>Films<br>
             <br>
-            <input type="text" id="director" name="director" placeholder="Director" required autofocus>
+            <input type="text" id="films" name="films" placeholder="Films" required autofocus>
             <br>
-
+              <input id="button" type="submit" value="Submit">
             <br>
-            <input type="submit" value="Submit">
         </form>
-
+s
     </div>
 </body>
 </html>
