--- a/SUBDproject/templates/show_producer.html
+++ b/SUBDproject/templates/show_producer.html
@@ -9,8 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../css/film.css">
-    <link rel="stylesheet" type="text/css" href="../css/nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/film.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/nav-bar.css">
 
 
 
@@ -34,6 +34,15 @@
 
 
         </ul>
+    </div>
+    <div id='list'>
+      {% for producer in producers %}
+
+          {{producer[1]}}
+          {{producer[2]}}
+
+          <br>
+      {% endfor %}
     </div>
 
 
