--- a/SUBDproject/static/css/film.css
+++ b/SUBDproject/static/css/film.css
@@ -26,3 +26,9 @@ body{
   padding: 24px 16px;
   text-decoration: none;
 }
+#list{
+  color:white;
+  padding: 24px 16px;
+  font-size: 24px;
+  text-align: center;
+}
