--- a/templates/actors.html
+++ b/templates/actors.html
@@ -39,7 +39,7 @@
     <div class= "post">
 
             <h2>Actors</h2>
-        <form action="http://localhost:5000/create_actor" target="" method="POST">
+        <form action="/create_actor" target="" method="POST">
             Name<br>
             <br>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
